# loqui

./: .gitignore  DESIGN.md  EVIDENCE.md  LICENSE  README.md  app_settings.py  brain.py  index.html  media.py  pyproject.toml  run_session.py  serve.py  tutor.py  voice.py  voiceserver.py
.github/workflows/: ci.yml
harness/: __init__.py  arbiter.py  brazilian.py  config.py  curricula.py  drives.py  invariants.py  languages.py  model.py  moves.py  persistence.py  portable.py  realizer.py  russian.py  scheduler.py  sim.py
harness/curricula/: pt.json  ru.json
tests/: test_harness.py
